--- a/src/styles.css
+++ b/src/styles.css
@@ -41,6 +41,10 @@ https://micku7zu.github.io/vanilla-tilt.js/index.html
   padding-left: 30px;
 }
 
+.board {
+  display: flex;
+}
+
 .board-row:after {
   clear: both;
   content: '';
@@ -48,6 +52,7 @@ https://micku7zu.github.io/vanilla-tilt.js/index.html
 }
 
 .status {
+  margin-left: 20px;
   margin-bottom: 10px;
 }
 
